--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -6,8 +6,11 @@
         dest: /etc/sudoers
         line: 'labuser ALL=(ALL) NOPASSWD: ALL'
         validate: 'visudo -cf %s'
+      become: yes
 
     - name: set up authorized keys for the labuser user
       authorized_key: user=labuser key="{{item}}"
       with_file:
         - ~/.ssh/id_ecdsa.pub
+      become: yes
+      
