--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -9,4 +9,4 @@
       become: yes
 
     - name: set up authorized keys for the labuser user
-      authorized_key: user=labuser key={{lookup('ansible.builtin.file', '/file/id_ecdsa.pub') }}
+      authorized_key: user=labuser key={{lookup('ansible.builtin.file', 'files/id_ecdsa.pub') }}
