--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -6,6 +6,7 @@
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
+      become: yes
 
     - name: create .labuser directory
       become: yes
@@ -28,6 +29,7 @@
       shell: kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml
       args:
         chdir: $HOME
+      become: yes
         
     - name: Get the token for joining the worker nodes
       become: yes
