--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -24,12 +24,11 @@
     state: present
 
 - name: Install docker and its dependecies
-  apt:
+  ansible.builtin.apt:
     name: "{{ packages }}"
     state: present
     update_cache: yes
-  vars:
-    packages:
+    pkg:
       - docker-ce
       - docker-ce-cli
       - containerd.io
