--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
 # tasks file for roles/common
 - name: Install packages that allow apt to be used over HTTPS
-  ansible.builtin.apt:
+  ansible.builtin.package:
     state: present
-    update_cache: yes
-    pkg:
+    name:
       - apt-transport-https
       - ca-certificates
       - curl
@@ -22,11 +21,8 @@
     state: present
 
 - name: Install docker and its dependecies
-  ansible.builtin.apt:
-    name: "{{ packages }}"
-    state: present
-    update_cache: yes
-    pkg:
+  ansible.builtin.package:
+    name:
       - docker-ce
       - docker-ce-cli
       - containerd.io
