--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,7 +3,6 @@
 - name: Install packages that allow apt to be used over HTTPS
   ansible.builtin.package:
     state: present
-    use: apt
     name:
       - apt-transport-https
       - ca-certificates
@@ -11,16 +10,21 @@
       - gnupg-agent
       - software-properties-common
   become: true
+  delegate_to: all
 
 - name: Add an apt signing key for Docker
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
+  become: true
+  delegate_to: all
 
 - name: Add apt repository for stable version
   apt_repository:
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
     state: present
+  become: true
+  delegate_to: all
 
 - name: Install docker and its dependecies
   ansible.builtin.package:
@@ -30,7 +34,8 @@
       - docker-ce
       - docker-ce-cli
       - containerd.io
-  become: true    
+  become: true
+  delegate_to: all
   notify:
     - docker status
 
@@ -39,16 +44,22 @@
     src: daemon.json
     dest: "/etc/docker/daemon.json"
     mode: 0644
+  become: true
+  delegate_to: all    
 
 - name: Restar docker
   systemd:
     state: restarted
     name: docker
+  become: true
+  delegate_to: all
 
 - name: Add labuser user to docker group
   user:
     name: labuser
     group: docker
+  become: true
+  delegate_to: all
 
 - name: Disable swap
   command: swapoff -a
@@ -58,12 +69,16 @@
   apt_key:
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
     state: present
+  become: true
+  delegate_to: all
 
 - name: Adding apt repository for Kubernetes
   apt_repository:
     repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
     state: present
     filename: kubernetes.list
+  become: true
+  delegate_to: all    
 
 - name: Install Kubernetes binaries
   apt:
@@ -75,6 +90,8 @@
       - "kubelet={{ kubernetes_version }}"
       - "kubeadm={{ kubernetes_version }}"
       - "kubectl={{ kubernetes_version }}"
+  become: true
+  delegate_to: all
 
 - name: Configure node ip
   lineinfile:
@@ -82,4 +99,6 @@
     line: KUBELET_EXTRA_ARGS=--node-ip={{ node_ip }}
     create: yes
     mode: 0644
+  become: true
+  delegate_to: all    
     
