--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: Install packages that allow apt to be used over HTTPS
   ansible.builtin.package:
     state: present
+    use: apt
     name:
       - apt-transport-https
       - ca-certificates
