--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -6,10 +6,10 @@
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
-      become: yes
+      become: true
 
     - name: create .labuser directory
-      become: yes
+      become: true
       become_user: labuser
       file:
         path: $HOME/.kube
@@ -17,7 +17,7 @@
         mode: 0755
 
     - name: copies admin.conf to user's kube config
-      become: yes
+      become: true
       copy:
         src: /etc/kubernetes/admin.conf
         dest: /home/labuser/.kube/config
@@ -25,14 +25,14 @@
         owner: labuser
 
     - name: install Pod network
-      become: yes
+      become: true
       become_user: labuser
       shell: kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml
       args:
         chdir: $HOME
         
     - name: Get the token for joining the worker nodes
-      become: yes
+      become: true
       become_user: labuser
       shell: kubeadm token create  --print-join-command
       register: kubernetes_join_command
@@ -40,3 +40,7 @@
     - debug:
         msg: "{{ kubernetes_join_command.stdout }}"
 
+    - name: Copy join command to local file.
+      local_action: copy content="{{ kubernetes_join_command.stdout_lines[0] }}" dest="/tmp/kubernetes_join_command" mode=0777
+      become: true
+      become_user: labuser
