--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -41,6 +41,8 @@
         msg: "{{ kubernetes_join_command.stdout }}"
 
     - name: Copy join command to local file.
-      local_action: copy content="{{ kubernetes_join_command.stdout_lines[0] }}" dest="/tmp/kubernetes_join_command" mode=0777
+      copy: content="{{ kubernetes_join_command.stdout_lines[0] }}" 
+      dest: "/tmp/kubernetes_join_command"
+      mode: "0777"
       become: true
       become_user: labuser
