--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -43,7 +43,8 @@
     - name: Copy join command to local file.
       copy: 
         content: "{{ kubernetes_join_command.stdout_lines[0] }}" 
-        dest: "/tmp/kubernetes_join_command"
+        dest: "/tmp/kubernetes_join_command.sh"
         mode: "0777"
       become: true
       become_user: labuser
+      delegate_to: worker
