--- a/roles/join-workers/tasks/main.yml
+++ b/roles/join-workers/tasks/main.yml
@@ -3,4 +3,5 @@
 
 - name: Run join node script
   ansible.builtin.script:
-    cmd: "/tmp/kubernetes_join_command.sh"
+     cmd: "/tmp/kubernetes_join_command.sh"
+  delegate_to: workers
