--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -47,4 +47,5 @@
         mode: "0777"
       become: true
       become_user: labuser
-      delegate_to: workers
+      delegate_to: "{{ item }}"
+      loop: "{{ groups['workers'] }}"
