--- a/roles/join-workers/tasks/main.yml
+++ b/roles/join-workers/tasks/main.yml
@@ -4,5 +4,5 @@
 - name: Run join node script
   ansible.builtin.script:
      cmd: "/tmp/kubernetes_join_command.sh"
-  delegate_to: "{{item}}"
-  with_items: "{{ groups['workers'] }}"
+   delegate_to: "{{ item }}"
+   loop: "{{ groups['workers'] }}"
