--- a/roles/join-workers/tasks/main.yml
+++ b/roles/join-workers/tasks/main.yml
@@ -2,5 +2,7 @@
 # tasks file for roles/join-workers
 
 - name: Run join node script
-  ansible.builtin.script:
+  ansible.builtin.shell:
      cmd: "/tmp/kubernetes_join_command.sh"
+  delegate_to: "{{ item }}"
+  loop: "{{ groups['workers'] }}"
