--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -6,7 +6,7 @@
         dest: /etc/sudoers
         line: 'labuser ALL=(ALL) NOPASSWD: ALL'
         validate: 'visudo -cf %s'
-      become: yes
+      become: true
 
     - name: set up authorized keys for the labuser user
       authorized_key: user=labuser key={{lookup('ansible.builtin.file', 'files/id_ecdsa.pub') | from_yaml_all}}
