--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for roles/master-k8
 
     - name: initialize the cluster
-      shell: kubeadm init --config {{lookup('ansible.builtin.file', 'files/kubeadm.yaml') | from_yaml_all }}
+      shell: kubeadm init --config "{{lookup('ansible.builtin.file', 'files/kubeadm.yaml') | from_yaml_all }}"
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
