--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -7,6 +7,7 @@
         chdir: $HOME
         creates: cluster_initialized.txt
       become: true
+      delegate_to: master
 
     - name: create .labuser directory
       become: true
