--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for roles/master-k8
 
     - name: initialize the cluster
-      shell: "kubeadm init --config {{ lookup('file', 'files/kubeadm.yaml') | from_yaml_all }s}"
+      shell: "kubeadm init --config {{ lookup('file', 'files/kubeadm.yaml') | from_yaml_all }}"
       become: true
       delegate_to: master
 
