--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -3,6 +3,8 @@
 
     - name: initialize the cluster
       shell: kubeadm init --config kubeadm.conf
+      args:
+        chdir: $HOME      
       become: true
 
     - name: create .labuser directory
