--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -3,7 +3,7 @@
 
     - name: Copy kubeadm.conf
       copy: 
-        src: "{{ kubernetes_join_command.stdout_lines[0] }}" 
+        src: files/kubeadmin.conf
         dest: "/tmp/kubeadm.conf"
         mode: "0777"
       delegate_to: master
