--- a/roles/master-k8s/files/kubeadm.conf
+++ b/roles/master-k8s/files/kubeadm.conf
@@ -5,5 +5,5 @@ apiServer:
     service-account-signing-key-file: /etc/kubernetes/pki/sa.key
     service-account-issuer: api
     service-account-api-audiences: api
-    pod-network-cidr: 10.244.0.0/16
-
+networking:
+  podSubnet: "10.244.0.0/16" # --pod-network-cidr
