--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -9,7 +9,7 @@
       delegate_to: master
 
     - name: initialize the cluster
-      shell: kubeadm init --config files/kubeadm.conf
+      shell: kubeadm init --config "{{ lookup('file', 'files/kubeadm.conf') }}" 
       become: true
 
     - name: create .labuser directory
