--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -6,7 +6,8 @@
         src: files/kubeadm.conf
         dest: "/tmp/kubeadm.conf"
         mode: "0777"
-      delegate_to: master
+      delegate_to: "{{ item }}"
+      loop: "{{ groups['workers'] }}"
 
     - name: initialize the cluster
       shell: kubeadm init --config "/tmp.kubeadm.conf"
