--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -6,12 +6,12 @@
         src: files/kubeadm.conf
         dest: "/tmp/kubeadm.conf"
         mode: "0777"
-      delegate_to: "{{ item }}"
-      loop: "{{ groups['workers'] }}"
+      delegate_to: master
 
     - name: initialize the cluster
-      shell: kubeadm init --config /tmp.kubeadm.conf
+      shell: kubeadm init --config /tmp/kubeadm.conf
       become: true
+      delegate_to: master
 
     - name: create .labuser directory
       become: true
