--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -39,7 +39,9 @@
     - name: customize calico Pod network
       become: true
       become_user: labuser
-      shell: kubectl create -f "{{ lookup('template', 'files/custom-resources.yaml') | from_yaml_all }}"      
+      shell: kubectl create -f "{{ lookup('template', 'files/custom-resources.yaml') | from_yaml_all }}"   
+      args:
+        chdir: $HOME         
         
     - name: Get the token for joining the worker nodes
       become: true
