--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -10,3 +10,4 @@
 
     - name: set up authorized keys for the labuser user
       authorized_key: user=labuser key={{lookup('ansible.builtin.file', 'files/id_ecdsa.pub') }}
+      become: true      
