--- a/test1.yaml
+++ b/test1.yaml
@@ -38,7 +38,13 @@
       become: true
       tags:
         - docker
-
+    - name: Add Kubernetes APT repository
+      apt_repository:
+        repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
+        state: present
+        filename: kubernetes.list
+        update_cache: yes
+        
     - name: Install Kubernetes packages
       apt:
         name:
