--- a/test1.yaml
+++ b/test1.yaml
@@ -39,6 +39,11 @@
       tags:
         - docker
 
+    - name: Add Kubernetes APT key
+      apt_key:
+        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        state: present
+
     - name: Add Kubernetes APT repository
       apt_repository:
         repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
