--- a/roles/master-k8s/tasks/main.yml
+++ b/roles/master-k8s/tasks/main.yml
@@ -13,9 +13,9 @@
       become: true
       delegate_to: master
 
-    - name: create ."{{ ansible_user }}" directory
+    - name: create .{{ ansible_user }}" directory
       become: true
-      become_user: "{{ ansible_user }}"
+      become_user: {{ ansible_user }}
       file:
         path: $HOME/.kube
         state: directory
@@ -51,8 +51,8 @@
         dest: "/tmp/kubernetes_join_command.sh"
         mode: "0777"
       become: true
-      become_user: "{{ ansible_user }}"
-      delegate_to: "{{ item }}"
+      become_user: {{ ansible_user }}
+      delegate_to: {{ item }}
       loop: "{{ groups['workers'] }}"
 
     - name: Bash Completion and Shortcuts
