--- a/test2.yaml
+++ b/test2.yaml
@@ -14,6 +14,13 @@
         - curl
         - gnupg
 
+    - name: Disable SWAP in fstab since kubernetes can't work with swap enabled (2/2)
+      replace:
+      path: /etc/fstab
+      regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
+      replace: '# \1'
+
+
     # Add Kubernetes signing key
     - name: Add Kubernetes signing key
       apt_key:
