--- a/test2.yaml
+++ b/test2.yaml
@@ -40,7 +40,7 @@
         - kubelet
         - kubeadm
         - kubectl
-        - containerd.io
+        - containerd
 
     # Configure Containerd
     - name: Configure Containerd
