--- a/test3.yaml
+++ b/test3.yaml
@@ -3,6 +3,9 @@
   hosts: all
   become: true
 
+  vars:
+    kubernetes_version: "1.25.1-00"
+    
   tasks:
     # Install prerequisites
     - name: Install apt-transport-https, curl and gnupg
@@ -44,9 +47,9 @@
         name: "{{ item }}"
         state: present
       with_items:
-        - kubelet
-        - kubeadm
-        - kubectl
+        - kubelet={{kubernetes_version}}
+        - kubeadm={{kubernetes_version}}
+        - kubectl={{kubernetes_version}}
 
     # Initialize Kubernetes cluster on the first node
     - name: Initialize Kubernetes cluster on first node
